Fix navbar covered by top messages

--- a/store/static/common.css
+++ b/store/static/common.css
@@ -11,7 +11,7 @@ footer hr { margin: 1em 2em; }
 .placeholder { margin: 0; background: whitesmoke; text-align: center; color: lightgray; }
 
 /* Alert messages */
-#top-messages { position: fixed; top: 3em; z-index: 50; width: 100%; text-align: center;}
+#top-messages { position: fixed; top: 3em; z-index: 50; height: 0; width: 100%; text-align: center;}
 #remote-messages, #local-messages { display: inline-block; }
 #local-messages .template { display: none; }
 
